.mutt/cache/bodies/imaps:unixbhaskar@gmail.com@imap.gmail.com:993/INBOX/2-203478
Delivered-To: unixbhaskar@gmail.com
Received: by 2002:a19:8c56:0:0:0:0:0 with SMTP id i22csp6404246lfj;
        Sun, 29 Sep 2019 17:24:02 -0700 (PDT)
X-Google-Smtp-Source: APXvYqxX1T+DsfDZi75Z1w8PHwTRAPXmmft5XQDXhdtFxVrPMA6XA4ZXj5UgzDQKFiSXm43/7rYr
X-Received: by 2002:a50:ccd3:: with SMTP id b19mr16445329edj.257.1569803041985;
        Sun, 29 Sep 2019 17:24:01 -0700 (PDT)
ARC-Seal: i=1; a=rsa-sha256; t=1569803041; cv=none;
        d=google.com; s=arc-20160816;
        b=JC3fxauk3WfTPAxgGGy7PMPIDBrBJDJ/7s2OsuNuQfOSmK0e7K3zAoZw5HkpfNGrae
         fME2T0JE3gFjYBToDkplaKQENmkIw5wKDfxPfA1G6ZzOsCHeO8ni9Xl+olZYAyQ0RFZq
         Ko8deAx4nq+kxyPVj0mLGhow8R1Jgth45EgKpjDUG6G3cuvyzWCYBTvYBQulOVof21vx
         /Df4rSr/kM6ZeGVIVNvTz1IvwWq4U4FIqcrGJo9Vb8WzWn2ywqTAt7Ui+RSzv5SmIeYt
         xwDXMaW6qHZlRCGsruEKVXP/iSc+Bu36bUlCUNl98rWui1K1T13ZgS4WIb4R5KRC5nnV
         ubIg==
ARC-Message-Signature: i=1; a=rsa-sha256; c=relaxed/relaxed; d=google.com; s=arc-20160816;
        h=list-id:precedence:sender:mime-version:message-id:subject:cc:to
         :from:date:dkim-signature;
        bh=QiQVM8XhhKVBVY4cGO3dpRItDispL6mHFkDxAfTmsYw=;
        b=ajVaIqbXSFtOzr91WniF6CRlVnSxUzGNcPQed5bcvum8AWNDxm9eSW5nqnb4u/m5Jo
         tMsx+J9wudaLHsjZLt0V6HMUZCZUnw59wufT6me3i3/4uuxI9FZoMOnnQHMMAUcbE3H7
         ZmYp3AuFM2/Fhei8H7pKiEXAAt7LVtdEY4bomfg5OjrfQrAqZ4sZNI6rsO42F2ZVntkr
         IaWXa1dD0tpxBIHoinULZIPclSaLHacZlDEi1w/JcbnJoJXUgJmYOUF2d5Zt0NjQxVHw
         4NtIGmqqAHrG0tvKgucRWcs4eWITB3S7PgzBAJIQoazhAOBzQEd2t7B45HbqianDX3tL
         lYEQ==
ARC-Authentication-Results: i=1; mx.google.com;
       dkim=pass header.i=@canb.auug.org.au header.s=201702 header.b=A0YA+Mbb;
       spf=pass (google.com: best guess record for domain of linux-kernel-owner@vger.kernel.org designates 209.132.180.67 as permitted sender) smtp.mailfrom=linux-kernel-owner@vger.kernel.org
Return-Path: <linux-kernel-owner@vger.kernel.org>
Received: from vger.kernel.org (vger.kernel.org. [209.132.180.67])
        by mx.google.com with ESMTP id f17si6060409eda.232.2019.09.29.17.23.23;
        Sun, 29 Sep 2019 17:24:01 -0700 (PDT)
Received-SPF: pass (google.com: best guess record for domain of linux-kernel-owner@vger.kernel.org designates 209.132.180.67 as permitted sender) client-ip=209.132.180.67;
Authentication-Results: mx.google.com;
       dkim=pass header.i=@canb.auug.org.au header.s=201702 header.b=A0YA+Mbb;
       spf=pass (google.com: best guess record for domain of linux-kernel-owner@vger.kernel.org designates 209.132.180.67 as permitted sender) smtp.mailfrom=linux-kernel-owner@vger.kernel.org
Received: (majordomo@vger.kernel.org) by vger.kernel.org via listexpand
        id S1729205AbfI3ANr (ORCPT <rfc822;petrus.archlinux@gmail.com>
        + 99 others); Sun, 29 Sep 2019 20:13:47 -0400
Received: from ozlabs.org ([203.11.71.1]:41793 "EHLO ozlabs.org"
        rhost-flags-OK-OK-OK-OK) by vger.kernel.org with ESMTP
        id S1726360AbfI3ANr (ORCPT <rfc822;linux-kernel@vger.kernel.org>);
        Sun, 29 Sep 2019 20:13:47 -0400
Received: from authenticated.ozlabs.org (localhost [127.0.0.1])
        (using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits)
         key-exchange ECDHE (P-256) server-signature RSA-PSS (4096 bits) server-digest SHA256)
        (No client certificate requested)
        by mail.ozlabs.org (Postfix) with ESMTPSA id 46hND75Gcfz9sP7;
        Mon, 30 Sep 2019 10:13:43 +1000 (AEST)
DKIM-Signature: v=1; a=rsa-sha256; c=relaxed/simple; d=canb.auug.org.au;
        s=201702; t=1569802424;
        bh=ogk0hlYIoBCOu2Vho4ZY5MeUcLlebA5N8aJ7TT616wQ=;
        h=Date:From:To:Cc:Subject:From;
        b=A0YA+Mbbuj4wlaLbzPIug3ttR4qGgEwEOeWOvQD5atl2fLpFGGYtDrX/53W9MurmK
         6d2q4WWFgULpPva/Tlw+y32hLQvYkDyxfOjjT5L79zvzsTqx94hjVhPTAiZe1WWjo9
         zXX21AY8MWW/E59EHtDGWZQ00lrkeTuMWnQejMBlPnxBceXG78O5nO0+gSx3xZ5zXI
         1ecY4ch806DE2vef0wPHjViXSALXH7n8+HazB0z8HGDdXMQvo9eo+8RaFhmry3XeBs
         L1QlZ709Ojusn0Le22kUbN8+d56iJ7dw5Pb1CEWbY32IBdYfmyyitF1sJWuifFPYjY
         YX6Tcfx3BYrww==
Date:   Mon, 30 Sep 2019 10:13:42 +1000
From:   Stephen Rothwell <sfr@canb.auug.org.au>
To:     Michael Ellerman <mpe@ellerman.id.au>,
        PowerPC <linuxppc-dev@lists.ozlabs.org>
Cc:     Linux Next Mailing List <linux-next@vger.kernel.org>,
        Linux Kernel Mailing List <linux-kernel@vger.kernel.org>,
        Nicholas Piggin <npiggin@gmail.com>
Subject: linux-next: build failure after merge of the powerpc tree
Message-ID: <20190930101342.36c1afa0@canb.auug.org.au>
MIME-Version: 1.0
Content-Type: multipart/signed; boundary="Sig_/2k83OivJyP3s+fo16M7TyT4";
 protocol="application/pgp-signature"; micalg=pgp-sha256
Sender: linux-kernel-owner@vger.kernel.org
Precedence: bulk
List-ID: <linux-kernel.vger.kernel.org>
X-Mailing-List: linux-kernel@vger.kernel.org

--Sig_/2k83OivJyP3s+fo16M7TyT4
Content-Type: text/plain; charset=US-ASCII
Content-Transfer-Encoding: quoted-printable

Hi all,

After merging the powerpc tree, today's linux-next build (powerpc64
allnoconfig) failed like this:

arch/powerpc/mm/book3s64/pgtable.c: In function 'flush_partition':
arch/powerpc/mm/book3s64/pgtable.c:216:3: error: implicit declaration of fu=
nction 'radix__flush_all_lpid_guest'; did you mean 'radix__flush_all_lpid'?=
 [-Werror=3Dimplicit-function-declaration]
  216 |   radix__flush_all_lpid_guest(lpid);
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~
      |   radix__flush_all_lpid

Caused by commit

  99161de3a283 ("powerpc/64s/radix: tidy up TLB flushing code")

radix__flush_all_lpid_guest() is only declared for CONFIG_PPC_RADIX_MMU
which is not set for this build.

I am not sure why this did not show up earlier (maybe a Kconfig
change?).

I added the following hack for today.

From: Stephen Rothwell <sfr@canb.auug.org.au>
Date: Mon, 30 Sep 2019 10:09:17 +1000
Subject: [PATCH] powerpc/64s/radix: fix for "tidy up TLB flushing code" and
 !CONFIG_PPC_RADIX_MMU

Signed-off-by: Stephen Rothwell <sfr@canb.auug.org.au>
---
 arch/powerpc/include/asm/book3s/64/tlbflush-radix.h | 4 ++++
 1 file changed, 4 insertions(+)

diff --git a/arch/powerpc/include/asm/book3s/64/tlbflush-radix.h b/arch/pow=
erpc/include/asm/book3s/64/tlbflush-radix.h
index 4ce795d30377..ca8db193ae38 100644
--- a/arch/powerpc/include/asm/book3s/64/tlbflush-radix.h
+++ b/arch/powerpc/include/asm/book3s/64/tlbflush-radix.h
@@ -35,6 +35,10 @@ static inline void radix__flush_all_lpid(unsigned int lp=
id)
 {
 	WARN_ON(1);
 }
+static inline void radix__flush_all_lpid_guest(unsigned int lpid)
+{
+	WARN_ON(1);
+}
 #endif
=20
 extern void radix__flush_hugetlb_tlb_range(struct vm_area_struct *vma,
--=20
2.23.0.rc1

--=20
Cheers,
Stephen Rothwell

--Sig_/2k83OivJyP3s+fo16M7TyT4
Content-Type: application/pgp-signature
Content-Description: OpenPGP digital signature

-----BEGIN PGP SIGNATURE-----

iQEzBAEBCAAdFiEENIC96giZ81tWdLgKAVBC80lX0GwFAl2RSLYACgkQAVBC80lX
0GxK5Qf/fRl1qjSxW74ZnbNlM9Qp3qgavwY8JTJA7WHERAFQxwC38n8CoHxMQ+RA
AIHhKJf9OSJj6gULfJROQDFj7oLYSFKor0gsZBkWsz9hzKlv/l0JnAmmScaxApAM
LjZJJnLg95JhLgwkjrBK6uoYlGW2gLnI2PxKPUSgGZJ2AO2Ylsg0aMamRNz4p7/H
6HHxYxk6gN5Idi0333uHjam1KQaa48NBxRisbPSHAv4ZhcxsqWbdaetc/h5FqDbY
LPqyJz5se9DECd6rxVB0iivvCWYHiTIXLCu54Ga3sHBIUARuTsNEUPurQ2jehn4e
3VT8pq/g5bo27xFXrrkR7hRDyn08ag==
=MWB0
-----END PGP SIGNATURE-----

--Sig_/2k83OivJyP3s+fo16M7TyT4--
